--- a/src/components/PillNavbar/PillNavbar.css
+++ b/src/components/PillNavbar/PillNavbar.css
@@ -1,6 +1,8 @@
 .pill-navbar {
-  position: sticky;
+  position: fixed;
   top: 1rem;
+  left: 0;
+  right: 0;
   z-index: 1000;
   width: 100%;
   display: flex;
